--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,24 +2,23 @@
   <div class="desktop-footer">
     <div class="footer-each">
       <h5>
-        <a href="https://www.google.com/maps/place/Zendesk/@-37.8171779,144.9592809,17z/data=!3m1!4b1!4m5!3m4!1s0x6ad65d4b6c187ceb:0xea7703041c1d49e8!8m2!3d-37.8171822!4d144.9614696" target="_blank">
-          <span>CBD</span><br><span>Melbourne</span><br><span>Australia</span>
+        <a href="https://www.google.com/maps/place/University+of+Michigan/@42.277145,-83.8144248,13z/data=!4m10!1m2!2m1!1suniversity+of+michigan!3m6!1s0x883cae38e7de1701:0x5ba14e5178e997e3!8m2!3d42.277145!4d-83.7382071!15sChZ1bml2ZXJzaXR5IG9mIG1pY2hpZ2FuWhgiFnVuaXZlcnNpdHkgb2YgbWljaGlnYW6SAQp1bml2ZXJzaXR54AEA!16s%2Fg%2F1hjh47gfn?entry=ttu" target="_blank">
+          <span>CBD</span><br><span>Ann Arbor</span><br><span>Michigan</span>
         </a>
       </h5>
     </div>
     <div class="footer-each">
-      <h5><a href="tel:+14154175500"><span>+61 429</span><br><span>835 565</span></a></h5>
+      <h5><a href="tel:+15088449096"><span>+1 508</span><br><span>844 9096</span></a></h5>
     </div>
     <div class="footer-each">
-      <h5><a href="mailto:newbusiness@junior.io"><span>jbelotti</span><br><span>@zendesk</span><br><span>.com</span></a></h5>
+      <h5><a href="mailto:sawanp.813@gmail.com"><span>sawanp.813</span><br><span>@gmail</span><br><span>.com</span></a></h5>
     </div>
     <div class="footer-each">
-      <h5><a href="mailto:press@junior.io"><span>jonathon.</span><br><span>bel.</span><br><span>melbourne</span><br><span>@gmail.com</span></a></h5>
+      <h5><a href="mailto:sawanp.813@gmail.com"><span>sawanp.</span><br><span>813/span><br><span>@gmail.com</span></a></h5>
     </div>
     <div class="footer-each">
-      <h5><a href="https://www.linkedin.com/in/jonathonbelotti/" target="_blank" alt="LinkedIn"><span>LinkedIn</span></a></h5>
-      <h5><a href="https://github.com/thundergolfer" target="_blank" alt="Github"><span>Github</span></a></h5>
-      <h5><a href="https://twitter.com/jonobelotti_IO" target="_blank" alt="Twitter"><span>Twitter</span></a></h5>
+      <h5><a href="https://www.linkedin.com/in/sawanpatel813/" target="_blank" alt="LinkedIn"><span>LinkedIn</span></a></h5>
+      <h5><a href="https://github.com/sawanp813" target="_blank" alt="Github"><span>Github</span></a></h5>
     </div>
   </div>
 </footer>
