fix homepage footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,15 +3,12 @@
     <div class="footer-each">
       <h5>
         <a href="https://www.google.com/maps/place/University+of+Michigan/@42.277145,-83.8144248,13z/data=!4m10!1m2!2m1!1suniversity+of+michigan!3m6!1s0x883cae38e7de1701:0x5ba14e5178e997e3!8m2!3d42.277145!4d-83.7382071!15sChZ1bml2ZXJzaXR5IG9mIG1pY2hpZ2FuWhgiFnVuaXZlcnNpdHkgb2YgbWljaGlnYW6SAQp1bml2ZXJzaXR54AEA!16s%2Fg%2F1hjh47gfn?entry=ttu" target="_blank">
-          <span>Location</span><br><span>Raleigh</span><br><span>North Carolina</span>
+          <span>Loc.</span><br><span>Raleigh</span><br><span>North Carolina</span>
         </a>
       </h5>
     </div>
     <div class="footer-each">
       <h5><a href="mailto:sawanp.813@gmail.com"><span>sawanp.813</span><br><span>@gmail</span><br><span>.com</span></a></h5>
-    </div>
-    <div class="footer-each">
-      <h5><a href="mailto:sawanp.813@gmail.com"><span>sawanp.</span><br><span>813</span><br><span>@gmail.com</span></a></h5>
     </div>
     <div class="footer-each">
       <h5><a href="https://www.linkedin.com/in/sawanpatel813/" target="_blank" alt="LinkedIn"><span>LinkedIn</span></a></h5>
